--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/uuid": "^8.3.1",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
+    "uuid": "^8.3.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
