--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "gobj": "node tools/dist/gameObject.js"
   },
   "dependencies": {
     "@types/uuid": "^8.3.1",
